homework 6 and a lot of fixes